--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ejs": "~0.8.5",
     "express": "~3.4.8",
     "socket.io": "~0.9.16",
-    "youtube-feeds": "~2.2.1",
+    "moment": "2.10.2",
     "colors": "~0.6.2",
     "underscore": "~1.6.0"
   },
